--- a/development.ini
+++ b/development.ini
@@ -15,6 +15,7 @@ pyramid.includes =
     pyramid_debugtoolbar
     pyramid_tm
 sqlalchemy.url = sqlite:///%(here)s/sqltutorial.sqlite
+tutorial.secret = 98zd
 
 # By default, the toolbar only appears for clients from IP addresses
 # '127.0.0.1' and '::1'.
